# raytrace

./: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Intersection.h  README.md  Render.cpp  Render.h  Render_cv.cpp  Render_cv.h  Render_gl.cpp  Render_gl.h  Tracer.cpp  Tracer.cu  Tracer.h  UnitTest.cpp  bunny_easy.txt  bunny_test.cpp  double_multi-lightsource.cpp  main.cpp  single_lightsource.cpp  single_multi-lightsource.cpp
Core/: Color3.cpp  Color3.h  LightRay3.cpp  LightRay3.h  Pixel2.cpp  Pixel2.h  Ray3.cpp  Ray3.h  Vector2.h  Vector3.cpp  Vector3.h
Object/: Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  InfinitePlane.cpp  InfinitePlane.h  Object.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
Object/Light/: LightRay3.cpp  LightRay3.h  PointLightRay3.cpp  PointLightRay3.h
Object/LightSource/: LightSource.h  PointLightSource.cpp  PointLightSource.h  SunLight.cpp  SunLight.h
Object/Material/: DefaultMaterial.cpp  DefaultMaterial.h  Material.h  Phong.cpp  Phong.h
